CHG Se mejora estilo para instrucciones de ayuda

--- a/src/components/slide-button/slide-button.scss
+++ b/src/components/slide-button/slide-button.scss
@@ -41,11 +41,12 @@
 
     span {
       display: inline-block;
-      max-width: 5rem;
-      width: 5rem;
+      max-width: 7rem;
+      width: 7rem;
       text-align: center;
       margin-left: auto;
       padding: 0.5rem;
+      font-size: 0.9rem;
     }
 
 
