--- a/src/components/slide-button/slide-button.scss
+++ b/src/components/slide-button/slide-button.scss
@@ -14,7 +14,7 @@
   -webkit-user-select: none; /* Chrome, Safari, and Opera */
   -webkit-touch-callout: none; /* Disable Android and iOS callouts*/
 
-  div {
+  // div {
     display: flex;
     flex-direction: row;
     border: 1px solid gray;
@@ -22,22 +22,22 @@
     align-items: center;
     padding: 1px;
 
-    button {
-      font-size: 1rem;
-      height: 3rem;
-      width: auto;
-      background-color: blue;
-      color: white;
-      padding: 0 1.3rem;
-      margin: 0;
-      border: 1px solid darkblue;
+    ion-button {
+      // font-size: 1rem;
+      // height: 3rem;
+      // width: auto;
+      // background-color: blue;
+      // color: white;
+      // padding: 0 1.3rem;
+      // margin: 0;
+      // border: 1px solid darkblue;
 
       transform: translateX(0px);
       transition: 0.1s linear;
     }
-    button[disabled] {
-      background-color: gray;
-    }
+    // button[disabled] {
+    //   background-color: gray;
+    // }
 
     span {
       display: inline-block;
@@ -50,7 +50,7 @@
     }
 
 
-  }
+  // }
 
   p {
     text-align: center;
